<resources>
    <string name="app_name">Advertiser</string>
    <string name="login_phonenum_text">Adja meg a telefonszámát:</string>
    <string name="login_button_text">Bejelentkezés</string>
    <string name="getcodebutton_text">Kulcs lekérése</string>
    <string name="login_redirect_to_register">Nincs fiókja? Regisztráljon itt</string>
    <string name="register_name_text">Adja meg a vezetéknevét:</string>
    <string name="register_name2_text">Adja meg a keresztnevét:</string>
    <string name="register_phone_text">Adja meg a telefonszámát:</string>
    <string name="register_button_text">Regisztrálás</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_adverts">AdvertsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cim">Cím</string>
    <string name="vezeteknev">Vezetéknév</string>
    <string name="keresztnev">Keresztnév</string>
    <string name="rovidleiras">Rövid leírás</string>
    <string name="hosszuleiras">Hosszú leírás</string>
    <string name="telefonszam">Telefonszám</string>
    <string name="hely">Hely</string>
    <string name="feltoltes">Feltöltés</string>
    <string name="choose">Kép kiválasztása</string>
    <string name="upload">Kép feltöltése</string>
    <string name="ImageUpload">kép</string>
    <string name="add_image">Kép hozzáadása</string>
    <string name="textviewtitle">textviewTitle</string>
    <string name="textviewshortdesc">textviewShortDesc</string>
    <string name="textviewlongdesc">textviewLongDesc</string>
    <string name="textviewphonenum">textviewPhoneNum</string>
    <string name="textviewlocation">textviewLocation</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="textxviewshortdesc">detail_shortDesc</string>
    <string name="visitors_number">visitors_number</string>
    <string name="detail_location">detail_location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="jelent_s">Jelentés</string>
    <string name="todo">TODO</string>
</resources>
