<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgreen"
    android:padding="20dp"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/login_logo_image"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:src="@drawable/sapientia_logo_white" />

            <TextView
                android:id="@+id/login_logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/login_logo_image"
                android:fontFamily="@font/solo"
                android:paddingTop="40dp"
                android:text="SAPIENTIA\nAdvertiser"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_toEndOf="@+id/login_logo_image" />

        </RelativeLayout>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_phonenum_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/login_logo" />

        <EditText
            android:id="@+id/login_edittext_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_sapientia_login_bg"
            android:drawableLeft="@drawable/custom_sapientia_login_phone"
            android:textColor="@color/white"
            android:inputType="phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text" />

        <Button
            android:id="@+id/login_getcodebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_sapientia_login_bg"
            android:padding="8dp"
            android:text="@string/getcodebutton_text"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_edittext_phone" />

        <ProgressBar
            android:id="@+id/progressBarGetCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/login_getcodebutton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_edittext_phone" />

        <Button
            android:id="@+id/login_redirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/darkgreen"
            android:outlineProvider="none"
            android:text="@string/login_redirect_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_getcodebutton" />

        <EditText
            android:id="@+id/login_edittext_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_sapientia_login_bg"
            android:drawableLeft="@drawable/custom_sapientia_login_code"
            android:textColor="@color/white"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_redirect" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_sapientia_login_bg"
            android:padding="8dp"
            android:text="@string/login_button_text"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_edittext_code" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>